# zledump

./: CMakeLists.txt  README.md  sandix_zle_tritium_run29.txt  sipm_test_config.txt
include/: WaveDump.h  keyb.h
scripts/: Auto_take_data.py  RunAcquisition.py  SIPMCalibration.py  ZLEAutoTakeData.py  ZLEAutoTakeDataHighTrigLowTrig.py  ZLERunAcquisition.py
scripts/test/20230607T132531/: metadata_20230607T132532.ini
src/: WDconfig.c  WaveDump.c  fft.c  keyb.c
